--- a/validate/templates/homepage.html
+++ b/validate/templates/homepage.html
@@ -20,7 +20,7 @@
             <div class="actions">
                 <button class="btn primary" onclick="window.location.href='/logout/'">Logout</button>
                 <button class="btn danger" id="delete-btn">Delete Account</button>
-                <button class="btn" onclick="window.location.href='/changepassword/'">Change Password</button>  
+                <button class="btn" onclick="window.location.href='/change-password/'">Change Password</button>  
             </div>
         </div>
     </div>
